Big checkin, changing all Remarks and other string to 255 instead of 65535 using @Lob (CLOBG) for all remarks fields other fields may need to be changed later. Added Derby support and New Workbench user support. BuildSampleDatabase now has 10 second timeout and can be configured for Derby. Now checks to see where the .Specify directory is local drive or user's home directory. Refactored DatabaseDriverInfo and Discipline classes Had to make chanes to SpecifyAppContextMgr for changes in disicplines and Derby Added Derby jar file

--- a/Specify/build.xml
+++ b/Specify/build.xml
@@ -160,7 +160,7 @@
 	<target name="genschema">
 		<hibernatetool destdir="${source.root}">
 			<annotationconfiguration propertyFile="src/${hibernate.properties}" configurationfile="src/${hibernate.cfg}" />
-			<hbm2ddl format="true"/>
+			<hbm2ddl format="true" outputfilename="specify.sql"/>
 		</hibernatetool>
 	</target>
 
