--- a/trunk/Specify/build.xml
+++ b/trunk/Specify/build.xml
@@ -1,14 +1,21 @@
 <?xml version="1.0"?>
-<project name="Specify 6.0 Build File" default="db" basedir=".">
+<project name="Specify 6.0 Build File" basedir=".">
 
 	<!-- Set up properties containing important project directories -->
+	
 	<property name="source.root" value="src" />
-	<property name="mac-src.root" value="mac-src" />
+	
+	<property name="compile.src.root" value="compile-src" />
+	<property name="compile.dst.root" value="compile-dst" />
+	
 	<property name="class.root" value="bin" />
+	
 	<property name="lib.dir" value="libs" />
 	<property name="hibernatelib.dir" value="hibernate_libs" />
 	<property name="externallib.dir" value="external_libs" />
 	<property name="macnative.dir" value="system_dep_libs/mac" />
+	<property name="ireport.dir" value="iReportLibs" />
+	<property name="system.dep.libs.dir" value="system_dep_libs" />
 	<property name="hibernate.properties" value="hibernate.properties" />
 	<property name="hibernate.cfg" value="hibernate.cfg.xml" />
 	<property name="dir.dest" value="dest" />
@@ -23,167 +30,105 @@
 	<property name="dist-mac" value="mac-dist" />
 
 
+	<!-- Needed for Packing on the Windows -->
+	<property name="dist-win" value="win-dist" />
+
+	<!-- Needed for Packing on the Linux -->
+	<property name="dist-linux" value="linux-dist" />
+
 	<!-- Set up the class path for compilation and execution -->
 	<path id="project.class.path">
-		<!-- Include our own classes, of course -->
-		<pathelement location="${class.root}" />
+		
 		<!-- Include jars in the project library directory -->
-		<fileset dir="${lib.dir}">
-			<include name="**/*.jar" />
-		</fileset>
 		<fileset dir="${hibernatelib.dir}">
 			<include name="**/*.jar" />
 		</fileset>
-		<fileset dir="${externallib.dir}">
+		
+	    <fileset dir="${lib.dir}">
 			<include name="**/*.jar" />
 		</fileset>
+
 		<fileset dir="${macnative.dir}">
 			<include name="**/*.jar" />
 		</fileset>
+		
+		<!-- Include our own classes, of course -->
+		<pathelement location="specify.jar"/>
+		
 	</path>
 
-	<!--<include name="**/*.jar"/>-->
-	<target name="db" description="Runs HSQLDB database management UI against the database file--use when application is not running">
-		<java classname="org.hsqldb.util.DatabaseManager" fork="yes">
-			<classpath refid="project.class.path" />
-			<arg value="-driver" />
-			<arg value="org.hsqldb.jdbcDriver" />
-			<arg value="-url" />
-			<arg value="jdbc:hsqldb:${data.dir}/collections" />
-			<arg value="-user" />
-			<arg value="sa" />
-		</java>
-	</target>
-
-	<!-- Teach Ant how to use Hibernate's code generation tool -->
-	<!--<taskdef name="hbm2java"
-           classname="net.sf.hibernate.tool.hbm2java.Hbm2JavaTask"
-           classpathref="project.class.path"/>-->
-
-	<taskdef name="hbm2java" classname="org.hibernate.tool.ant.Hbm2JavaGeneratorTask" classpathref="project.class.path" />
-
-
-	<!-- Formally introduce Ant to the toolset -->
-	<taskdef name="hibernatetool" classname="org.hibernate.tool.ant.HibernateToolTask">
-		<classpath refid="project.class.path" />
-	</taskdef>
-
-	<!-- Create our runtime subdirectories and copy resources into them -->
-	<target name="prepare" description="Sets up build structures">
-		<mkdir dir="${class.root}" />
-
-		<!-- Copy our property files and O/R mappings for use at runtime -->
-		<copy todir="${class.root}">
+	<!-- Prepare for Windows and Linux Compile -->
+	<target name="dist-prepare" description="Sets up build structures for Non Mac Platforms">
+		
+		<mkdir dir="${compile.dst.root}" />
+		<mkdir dir="${compile.src.root}" />
+		
+		<copy todir="${compile.src.root}">
 			<fileset dir="${source.root}">
 				<include name="**/*.properties" />
-				<include name="**/*.hbm.xml" />
-			</fileset>
-		</copy>
-	</target>
-
-	<target name="dist-prepare" description="Sets up build structures for Mac-Dist">
-		<mkdir dir="${class.root}" />
-
-		<!-- Copy our property files and O/R mappings for use at runtime -->
-		<copy todir="${class.root}">
-			<fileset dir="${source.root}">
-				<include name="**/*.properties" />
-				<include name="**/*.hbm.xml" />
-				<exclude name="**/AttachmentUtils.java" />
-			</fileset>
-		</copy>
-		<mkdir dir="${mac-src.root}" />
-		<copy todir="${mac-src.root}">
-			<fileset dir="${source.root}">
 				<include name="**/*.java" />
-				<exclude name="**/AttachmentUtils.java" />
 			</fileset>
 		</copy>
+		
 	</target>
 
-	<!-- Compile the java source of the project -->
-	<target name="compile" depends="prepare" description="Compiles all Java classes">
-		<javac srcdir="${source.root}" destdir="${class.root}" debug="on" optimize="off" deprecation="on">
-			<classpath refid="project.class.path" />
-		</javac>
+	<!-- Prepare for Mac Compile -->
+	<target name="dist-prepare-mac" description="Sets up build structures for Mac-Dist">
+		
+		<mkdir dir="${compile.dst.root}" />
+		<mkdir dir="${compile.src.root}" />
+		
+		<copy todir="${compile.src.root}">
+			<fileset dir="${source.root}">
+				<include name="**/*.properties" />
+				<exclude name="**/AttachmentUtils.java" />
+				<include name="**/*.java" />
+			</fileset>
+		</copy>
+		
 	</target>
 
+	<!-- Compile the java source of the project Windows and Linux -->
 	<target name="dist-compile" depends="dist-prepare" description="Compiles all Java classes for Mac-Dist">
-		<javac srcdir="${mac-src.root}" destdir="${class.root}" debug="on" optimize="off" deprecation="on">
+		
+		<javac srcdir="${compile.src.root}" destdir="${compile.dst.root}" debug="on" optimize="off" deprecation="on">
 			<classpath refid="project.class.path" />
 		</javac>
-	</target>
-
-	<target name="run" description="Runs prototype" depends="compile">
-		<java classname="edu.ku.brc.specify.Specify" fork="true">
-			<classpath refid="project.class.path" />
-			<jvmarg value="-Xmx900m" />
-		</java>
-	</target>
-
-	<target name="initData" description="Runs Initialize Data" depends="compile">
-		<java classname="edu.ku.brc.specify.InitializeData" fork="true">
-			<classpath refid="project.class.path" />
-			<jvmarg value="-Xmx900m" />
-		</java>
-	</target>
-
-	<target name="runwb" description="Runs prototype" depends="compile">
-		<java classname="edu.ku.brc.specify.WorkBench" fork="true">
-			<classpath refid="project.class.path" />
-			<jvmarg value="-Xmx900m" />
-		</java>
-	</target>
-
-	<target name="generateDatamodelDoc" description="Generates datamodel document" depends="compile">
-		<java classname="edu.ku.brc.specify.tools.datamodelgenerator.DatamodelGenerator" fork="true">
-			<classpath refid="project.class.path" />
-		</java>
-	</target>
-
-
-	<target name="gencode">
-		<!-- bit of a best guess, I'm afraid -->
-		<mkdir dir="${hibernate.generated.code.destdir}" />
-		<hibernatetool destdir="${hibernate.generated.code.destdir}">
-			<configuration propertyFile="src/${hibernate.properties}">
-				<fileset dir="${source.root}">
-					<include name="**/*.hbm.xml" />
-					<exclude name="**/PickList.hbm.xml" />
-				</fileset>
-			</configuration>
-			<hbm2java />
-			<!-- <hbm2ddl /> -->
-		</hibernatetool>
-	</target>
-
-	<target name="genschema">
-		<hibernatetool destdir="${source.root}">
-			<annotationconfiguration propertyFile="src/${hibernate.properties}" configurationfile="src/${hibernate.cfg}" />
-			<hbm2ddl format="true" outputfilename="specify.sql"/>
-		</hibernatetool>
-	</target>
-
-	<target name="updateschema">
-		<hibernatetool destdir="${source.root}">
-			<annotationconfiguration propertyFile="src/${hibernate.properties}" configurationfile="src/${hibernate.cfg}" />
-			<hbm2ddl format="true" update="true" />
-		</hibernatetool>
-	</target>
-
-	<target name="jar" depends="compile">
-		<jar destfile="${jar.name}.jar" basedir="${class.root}" />
+		
 	</target>
 	
+	<!-- Compile the java source of the project Mac-->
+	<target name="dist-compile-mac" depends="dist-prepare-mac" description="Compiles all Java classes for Mac-Dist">
+		
+		<javac srcdir="${compile.src.root}" destdir="${compile.dst.root}" debug="on" optimize="off" deprecation="on">
+			<classpath refid="project.class.path" />
+		</javac>
+	</target>
+	
+	<!-- Jar up compiled classes -->
 	<target name="dist-jar" depends="">
+		
 		<jar destfile="${jar.name}.jar" basedir="${class.root}" />
+
 	</target>
 
+	<!-- Jar up compiled classes -->
+	<target name="dist-jar-mac" depends="">
+		
+		<jar destfile="${jar.name}.jar" basedir="${class.root}" />
+
+	</target>
+
+	<!-- Jar Clean Up -->
 	<target name="clean-jar">
 		<delete file="${jar.name}.jar" />
 	</target>
 
+	<!-- *************************************************************
+	    Mac Distribution
+	    ************************************************************* -->
 	<target name="dist-mac" depends="dist-jar">
+		
 		<property name="appdir" value="${dist-mac}/${app.name}.app" />
 
 		<mkdir dir="${dist-mac}" />
@@ -211,7 +156,7 @@
 			</fileset>
 		</copy>
 		
-		<!-- Copy the app -->
+		<!-- Copy the main app jar -->
 		<copy file="${jar.name}.jar" todir="${appdir}/Contents/Resources/Java" />
 
 		<!-- Copy Icons -->
@@ -234,10 +179,14 @@
 
 	</target>
 
+	<!-- *************************************************************
+	     Mac Distribution for the Builder
+	     ************************************************************* -->
 	<target name="dist-mac-bld" depends="dist-jar">
 		
 		<property name="appdir" value="${dist-mac}/SpecifyBuilder.app" />
-
+		<property name="derby.data.path" value="${dist-mac}" />
+		
 		<mkdir dir="${dist-mac}" />
 		<mkdir dir="${appdir}" />
 		<mkdir dir="${appdir}/Contents" />
@@ -276,7 +225,7 @@
 			</fileset>
 		</copy>
 		
-		<!-- Copy the app -->
+		<!-- Copy the main app jar -->
 		<copy file="${jar.name}.jar" todir="${appdir}/Contents/Resources/Java" />
 
 		<!-- Copy the build.xml -->
@@ -325,5 +274,132 @@
 		<exec command="/Developer/Tools/SetFile -a B ${appdir}" />
 
 	</target>
+		
+	<!-- *************************************************************
+	     Build Empty Derby DB
+	     ************************************************************* -->
+	<target name="build-empty-derby-db">
+		<!--
+		<property name="current.classpath" refid="project.class.path"/>
+		<echo level="info">
+		   Classpath is :
+		      ${current.classpath}
+		   </echo>
+		-->
+		
+		<java classname="edu.ku.brc.specify.tests.BuildSampleDatabase" fork="true">
+		    <classpath refid="project.class.path" />
+			<arg value="build_empty"/>
+			<arg value="${derby.data.path}"/>
+		</java>
+	</target>
+		
+	<!-- *************************************************************
+	     Common files between Windows and Linux
+	     ************************************************************* -->
+	<target name="basic-non-mac-dist">
 
+		<!-- Copy config dir -->
+		<copy todir="${appdir}/config">
+			<fileset dir="config">
+				<exclude name="**/.svn" />
+				<exclude name="**/.csv" />
+			</fileset>
+		</copy>
+		
+		<!-- Copy the main app jar -->
+		<copy file="${jar.name}.jar" todir="${appdir}/libs" />
+
+		<copy todir="${appdir}/libs">
+			<fileset dir="libs">
+				<include name="*.jar" />
+			</fileset>
+			<fileset dir="${hibernatelib.dir}">
+				<include name="*.jar" />
+			</fileset>
+			<fileset dir="${ireport.dir}">
+				<include name="iReport.jar" />
+			</fileset>
+			<fileset dir="${system.dep.libs.dir}">
+				<include name="*.jar" />
+			</fileset>
+		</copy>
+
+		<!-- Copy Help -->
+		<copy todir="${appdir}/help">
+			<fileset dir="help">
+				<exclude name="**/.svn" />
+			</fileset>
+		</copy>
+
+		<!-- Demo Files -->
+		<copy file="demo_files/workbench/FishCollectingTrip.csv" todir="${appdir}/examples" />
+		<copy file="demo_files/workbench/JohsonCountyTrip.csv" todir="${appdir}/examples" />
+	    <copy file="demo_files/workbench/SaipanTrip.xls" todir="${appdir}/examples" />
+
+	</target>
+
+	<!-- *************************************************************
+	     Windows Distribution
+	     ************************************************************* -->
+	<target name="dist-win" depends="dist-jar">
+		
+		<property name="appdir" value="${dist-win}/Specify" />
+		<property name="derby.data.path" value="${dist-linux}" />
+		
+		<antcall target="clean-jar"/>
+		<antcall target="dist-jar"/>
+		<antcall target="dist-win-clean"/>
+		
+		<mkdir dir="${dist-win}" />
+		<mkdir dir="${dist-win}/libs" />
+		<mkdir dir="${dist-win}/examples" />
+		
+		<antcall target="build-empty-derby-db"/>
+		<antcall target="basic-non-mac-dist"/>
+
+	</target>
+
+	<!-- *************************************************************
+	     Linux Distribution
+	     ************************************************************* -->
+	<target name="dist-linux">
+		
+		<property name="appdir" value="${dist-linux}/Specify" />
+		<property name="derby.data.path" value="${dist-linux}" />
+		
+		<antcall target="clean-jar"/>
+		<antcall target="dist-jar"/>
+		<antcall target="dist-linux-clean"/>
+		
+		<mkdir dir="${dist-linux}" />
+		<mkdir dir="${appdir}/libs" />
+
+		<antcall target="build-empty-derby-db"/>
+		<antcall target="basic-non-mac-dist"/>
+		
+		<!-- Copy info list -->
+		<copy file="${packaging}/linux/specify.sh" todir="${appdir}/." />
+		<chmod file="${appdir}/specify.sh" perm="u+rx"/>
+		
+	    <delete dir="${compile.src.root}"/>
+		<delete dir="${compile.dst.root}"/>
+		
+	</target>
+
+	<!--*************************************************************
+	     Clean Distributions
+	    ************************************************************* -->
+	<target name="dist-mac-clean">
+		<delete dir="${dist-mac}"/>
+    </target>
+	
+	<target name="dist-win-clean">
+		<delete dir="${dist-win}"/>
+    </target>
+	
+	<target name="dist-linux-clean">
+		<delete dir="${dist-linux}"/>
+    </target>
+	
 </project>
