--- a/trunk/Specify/build.xml
+++ b/trunk/Specify/build.xml
@@ -123,70 +123,16 @@
 	<target name="clean-jar">
 		<delete file="${jar.name}.jar" />
 	</target>
-
-	<!-- *************************************************************
-	    Mac Distribution
-	    ************************************************************* -->
-	<target name="dist-mac" depends="dist-jar">
-		
-		<property name="appdir" value="${dist-mac}/${app.name}.app" />
-
-		<mkdir dir="${dist-mac}" />
-		<mkdir dir="${appdir}" />
-		<mkdir dir="${appdir}/Contents" />
-		<mkdir dir="${appdir}/Contents/MacOS" />
-		<mkdir dir="${appdir}/Contents/Resources" />
-		<mkdir dir="${appdir}/Contents/Resources/Java" />
-		<mkdir dir="${appdir}/Contents/Resources/Java/config" />
-
-		<!-- Copy Application Stub Compile the java source of the project -->
-		<copy file="${packaging}/JavaApplicationStub" todir="${appdir}/Contents/MacOS" />
-		<exec command="chmod 755 ${appdir}/Contents/MacOS/JavaApplicationStub" />
-
-		<!-- Copy info list -->
-		<copy file="${packaging}/Info.plist" todir="${appdir}/Contents" />
-
-		<!-- Copy PkgInfo -->
-		<copy file="${packaging}/PkgInfo" todir="${appdir}/Contents" />
-
-		<!-- Copy config dir -->
-		<copy todir="${appdir}/Contents/Resources/Java/config">
-			<fileset dir="config">
-				<include name="**/*.xml" />
-			</fileset>
-		</copy>
-		
-		<!-- Copy the main app jar -->
-		<copy file="${jar.name}.jar" todir="${appdir}/Contents/Resources/Java" />
-
-		<!-- Copy Icons -->
-		<copy file="${packaging}/specify.icns" todir="${appdir}/Contents/Resources" />
-
-		<copy todir="${appdir}/Contents/Resources/Java">
-			<fileset dir="libs">
-				<include name="*.jar" />
-			</fileset>
-			<fileset dir="${hibernatelib.dir}">
-				<include name="*.jar" />
-			</fileset>
-			<fileset dir="${macnative.dir}">
-				<include name="*.jar" />
-			</fileset>
-		</copy>
-
-		<!-- Tell OS the dir is an App -->
-		<exec command="/Developer/Tools/SetFile -a B ${appdir}" />
-
-	</target>
+	
 
 	<!-- *************************************************************
 	     Mac Distribution for the Builder
 	     ************************************************************* -->
-	<target name="dist-mac-bld" depends="dist-jar">
+	<target name="dist-mac-bld" depends="">
 		
 		<property name="appdir" value="${dist-mac}/SpecifyBuilder.app" />
 		<property name="derby.data.path" value="${dist-mac}" />
-		
+
 		<mkdir dir="${dist-mac}" />
 		<mkdir dir="${appdir}" />
 		<mkdir dir="${appdir}/Contents" />
@@ -274,6 +220,87 @@
 		<exec command="/Developer/Tools/SetFile -a B ${appdir}" />
 
 	</target>
+
+	<!-- *************************************************************
+	    Mac Distribution
+	    ************************************************************* -->
+	<target name="dist-mac" depends="">
+		
+		<property name="appdir" value="${dist-mac}/${app.name}.app" />
+		<property name="derby.data.path" value="${dist-mac}" />
+		
+		<antcall target="clean-jar"/>
+		<antcall target="dist-jar-mac"/>
+		<antcall target="dist-mac-clean"/>
+		
+		
+		<antcall target="build-empty-derby-db"/>
+		
+		
+		<mkdir dir="${dist-mac}" />
+		<mkdir dir="${appdir}" />
+		<mkdir dir="${appdir}/Contents" />
+		<mkdir dir="${appdir}/Contents/MacOS" />
+		<mkdir dir="${appdir}/Contents/Resources" />
+		<mkdir dir="${appdir}/Contents/Resources/Java" />
+		<mkdir dir="${appdir}/Contents/Resources/Java/config" />
+
+		<!-- Copy Application Stub Compile the java source of the project -->
+		<copy file="${packaging}/JavaApplicationStub" todir="${appdir}/Contents/MacOS" />
+		<exec command="chmod 755 ${appdir}/Contents/MacOS/JavaApplicationStub" />
+
+		<!-- Copy info list -->
+		<copy file="${packaging}/Info.plist" todir="${appdir}/Contents" />
+
+		<!-- Copy PkgInfo -->
+		<copy file="${packaging}/PkgInfo" todir="${appdir}/Contents" />
+
+		<!-- Copy config dir -->
+		<copy todir="${appdir}/Contents/Resources/Java/config">
+			<fileset dir="config">
+				<exclude name="**/*.svn" />
+			</fileset>
+		</copy>
+		
+		<!-- Copy the main app jar -->
+		<copy file="${jar.name}.jar" todir="${appdir}/Contents/Resources/Java" />
+
+		<!-- Copy Icons -->
+		<copy file="${packaging}/specify.icns" todir="${appdir}/Contents/Resources" />
+
+		<copy todir="${appdir}/Contents/Resources/Java">
+			<fileset dir="libs">
+				<include name="*.jar" />
+			</fileset>
+			<fileset dir="${hibernatelib.dir}">
+				<include name="*.jar" />
+			</fileset>
+			<fileset dir="${ireport.dir}">
+				<include name="iReport.jar" />
+			</fileset>
+			<fileset dir="${macnative.dir}">
+				<include name="*.jar" />
+			</fileset>
+		</copy>
+
+		<!-- Tell OS the dir is an App -->
+		<exec command="/Developer/Tools/SetFile -a B ${appdir}" />
+		
+
+		<!-- Copy Help -->
+		<copy todir="${appdir}/Contents/Resources/Java/help">
+			<fileset dir="help">
+				<exclude name="**/.svn" />
+			</fileset>
+		</copy>
+
+		<!-- Demo Files -->
+		<copy file="demo_files/workbench/FishCollectingTrip.csv" todir="${dist-mac}/examples" />
+		<copy file="demo_files/workbench/JohsonCountyTrip.csv" todir="${dist-mac}/examples" />
+	    <copy file="demo_files/workbench/SaipanTrip.xls" todir="${dist-mac}/examples" />
+
+	</target>
+
 		
 	<!-- *************************************************************
 	     Build Empty Derby DB
@@ -332,11 +359,6 @@
 			</fileset>
 		</copy>
 
-		<!-- Demo Files -->
-		<copy file="demo_files/workbench/FishCollectingTrip.csv" todir="${appdir}/examples" />
-		<copy file="demo_files/workbench/JohsonCountyTrip.csv" todir="${appdir}/examples" />
-	    <copy file="demo_files/workbench/SaipanTrip.xls" todir="${appdir}/examples" />
-
 	</target>
 
 	<!-- *************************************************************
@@ -357,6 +379,11 @@
 		
 		<antcall target="build-empty-derby-db"/>
 		<antcall target="basic-non-mac-dist"/>
+		
+		<!-- Demo Files -->
+		<copy file="demo_files/workbench/FishCollectingTrip.csv" todir="${dist-win}/examples" />
+		<copy file="demo_files/workbench/JohsonCountyTrip.csv" todir="${dist-win}/examples" />
+	    <copy file="demo_files/workbench/SaipanTrip.xls" todir="${dist-win}/examples" />
 
 	</target>
 
@@ -382,8 +409,10 @@
 		<copy file="${packaging}/linux/specify.sh" todir="${appdir}/." />
 		<chmod file="${appdir}/specify.sh" perm="u+rx"/>
 		
-	    <delete dir="${compile.src.root}"/>
-		<delete dir="${compile.dst.root}"/>
+		<!-- Demo Files -->
+		<copy file="demo_files/workbench/FishCollectingTrip.csv" todir="${dist-linux}/examples" />
+		<copy file="demo_files/workbench/JohsonCountyTrip.csv" todir="${dist-linux}/examples" />
+	    <copy file="demo_files/workbench/SaipanTrip.xls" todir="${dist-linux}/examples" />
 		
 	</target>
 
