Fix for WBs with the same name Switch over to use the new AppData work

--- a/Specify/build.xml
+++ b/Specify/build.xml
@@ -364,20 +364,20 @@
 	<!-- *************************************************************
 	     Windows Distribution
 	     ************************************************************* -->
-	<target name="dist-win" depends="dist-jar">
+	<target name="dist-win">
 		
-		<property name="appdir" value="${dist-win}/Specify" />
-		<property name="derby.data.path" value="${dist-linux}" />
+		<property name="appdir" value="${dist-win}/SpecifyWin" />
+		<property name="derby.data.path" value="${dist-win}/DerbyDatabases" />
 		
 		<antcall target="clean-jar"/>
+		<!-- <antcall target="dist-win-clean"/> -->
 		<antcall target="dist-jar"/>
-		<antcall target="dist-win-clean"/>
 		
 		<mkdir dir="${dist-win}" />
-		<mkdir dir="${dist-win}/libs" />
+		<mkdir dir="${appdir}/libs" />
 		<mkdir dir="${dist-win}/examples" />
 		
-		<antcall target="build-empty-derby-db"/>
+		<!-- <antcall target="build-empty-derby-db"/> -->
 		<antcall target="basic-non-mac-dist"/>
 		
 		<!-- Demo Files -->
@@ -393,11 +393,11 @@
 	<target name="dist-linux">
 		
 		<property name="appdir" value="${dist-linux}/Specify" />
-		<property name="derby.data.path" value="${dist-linux}" />
+		<property name="derby.data.path" value="${dist-linux}/DerbyDatabases" />
 		
 		<antcall target="clean-jar"/>
-		<antcall target="dist-jar"/>
 		<antcall target="dist-linux-clean"/>
+	    <antcall target="dist-jar"/>
 		
 		<mkdir dir="${dist-linux}" />
 		<mkdir dir="${appdir}/libs" />
