changes for Windows and Linux build

--- a/Specify/build.xml
+++ b/Specify/build.xml
@@ -112,8 +112,10 @@
 			<fileset dir="${class.root}">
 				<include name="**/*.class" />
 				<include name="**/*.properties" />
+				<include name="**/*.xml" />
+				<include name="**/images/*.*" />
 			</fileset>
-	    </jar>
+		</jar>
 
 	</target>
 
