Fixes for all 9 issues for Bug 4558 these fixes should all be in the update release. (Note: we need a better and bigger icon for the drop zone)

--- a/Specify/build.xml
+++ b/Specify/build.xml
@@ -376,6 +376,7 @@
 			</fileset>
 			<fileset dir="${macnative.dir}">
 				<include name="*.jar" />
+				<include name="**/*.jnilib" />
 			</fileset>
 		</copy>
 
