build.xml modified to put results of javahelp fulltext index build in right place. full text search is now enabled in SpecifyHelp.hs. (It won't work within eclipse unless ant or jhindexer is used to build indexes. the built index folder should be named JavaHelpSearch (the default) and placed in the help/ directory.

--- a/Specify/build.xml
+++ b/Specify/build.xml
@@ -440,6 +440,8 @@
 	     ************************************************************* -->
 	<target name="build-help-fulltext">
 	  <java jar="${javahelp-home}/javahelp/bin/jhindexer.jar" fork="true">
+	  	<arg value="-db"/>
+	  	<arg value="${appdir}/help"/>
 	    <arg value="${appdir}/help/SpecifyHelp"/>
 	  </java>
 	</target>
